Changed the position of the js linking code from the footer to the header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
+
+    <script src="scripts/navigation.js" defer></script>
     
 </head>
 
@@ -74,6 +76,6 @@
         <p>&copy;<span id="currentyear"></span> Archibong Victor Nkamenyin,Lagos, Nigeria.</p>
         <p id="lastModified"></p>
     </footer>
-    <script src="scripts/navigation.js"></script>
+    
 </body>
 </html>
