Changes made to the value of img width and height

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <img src="images/home.svg" alt="Site Logo" width="10px" height="10px">
+        <img src="images/home.svg" alt="Site Logo" width="10" height="10">
         <span>Course Home Page</span>
         <button id="ham-btn" class="hamburger"></button>
     </header>
@@ -40,7 +40,7 @@
 
             <div class="student-photo">
                 <h4>Student Photo</h4>
-                <img src="images/Archibong 2.jpg" alt="Photo of Archibong Victor">
+                <img src="images/archibong.jpg" alt="Photo of Archibong Victor">
             </div>
         </div>
         
