--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Page Information -->
+    <meta name="description" content="A student project portfolio showcasing my skills, coursework, and achievements in web development.">
+    <meta name="keywords" content="student, portfolio, web development, HTML, CSS, JavaScript, programming">
+    <meta name="author" content="Archibong Victor">
+    <title>Archibong Victor - Course Home Page</title>
 
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <script src="scripts/navigation.js" defer></script>
     
