--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
+     
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <script src="scripts/navigation.js" defer></script>
     
 </head>
