--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta name="description" content="A student project portfolio showcasing my skills, coursework, and achievements in web development.">
     <meta name="keywords" content="student, portfolio, web development, HTML, CSS, JavaScript, programming">
     <meta name="author" content="Archibong Victor">
+
+    <meta property="og:description" content="Explore my projects, coursework, and journey as a web development student.">
+    <meta property="og:image" content="images/archibong.jpg">
+    <meta property="og:title" content="My Student Portfolio">
+    <meta property="og:url" content="index.html">
+
     <title>Archibong Victor - Course Home Page</title>
 
     <link rel="stylesheet" href="styles/normalize.css">
