--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -13,6 +13,7 @@
     <meta property="og:url" content="directory.html">
 
     <link rel="stylesheet" href="styles/directory.css">
+    <link rel="stylesheet" href="styles/larger.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,6 +24,107 @@
     <title>Ikeja Chamber of Commerce</title>
 </head>
 <body>
-    
+
+    <!--Header-->
+    <header>
+        <div class="logo">
+            <img src="images/home.svg" alt="Ikeja Chamber of Commerce">
+            <span>Ikeja Chamber of Commerce</span>
+        </div>
+        <nav>
+            <ul>
+                <li class="active"><a href="directory.html">Home</a></li>
+                <li><a href="#">Directory</a></li>
+                <li><a href="#">Join</a></li>
+                <li><a href="#">Discover</a></li>
+            </ul>
+        </nav>
+      </header>
+
+
+      <!--Main Content-->
+      <main>
+        <section class="hero">
+            <img src="images/civic-towers.jpg" alt="Civic towers, Lagos.">
+            <button class="btn">Keynote Tickets</button>
+        </section>
+
+        <h1>Home</h1>
+        <section class="info-grid">
+            <article class="box">
+                <h2>Events</h2>
+                <div class="content">
+                <!-- Events content -->
+                </div>
+            </article>
+
+            <article class="box">
+                <h2>Current Weather</h2>
+                <div class="content weather-grid">
+                    <div class="icon">
+                        <img src="images/cloud-sun.svg" alt="Weather Icon">
+                    </div>
+                    <div class="details">
+                        <p><strong>75°F</strong></p>
+                        <p>Partly Cloudy</p>
+                        <p>High: 85°</p>
+                        <p>Low: 52°</p>
+                        <p>Humidity: 34%</p>
+                        <p>Sunrise: 7:30am</p>
+                        <p>Sunset: 9:59pm</p>
+                    </div>
+                </div>
+            </article>
+
+            <article class="box">
+                <h2>Weather Forecast</h2>
+                <div class="content">
+                    <p>Today: <strong>90°F</strong></p>
+                    <p>Wednesday: <strong>89°F</strong></p>
+                    <p>Thursday: <strong>68°F</strong></p>
+                </div>
+            </article>
+        </section>
+
+        <section class="business-cards">
+            <div class="view-toggle">
+                <button id="grid-view" class="active">Grid View</button>
+                <button id="list-view">List View</button>
+            </div>
+
+            <!-- Business Display with JS from JSON File -->
+            <div id="business-list" class="business-grid"></div>
+        </section>
+
+      </main>
+
+
+      <!--Footer-->
+      <footer>
+        <div class="footer-grid">
+            <div class="footer-info">
+                <p><strong>Ikeja Chamber of Coommerce</strong></p>
+                <p>6 Opebi Road, Ikeja, Lagos</p>
+                <p>Email: info@ikejacc.org</p>
+                <p>Phone: (234) 9079643154</p>
+            </div>
+
+
+            <div class="social">
+                <a href="https://www.facebook.com/victor.archibong.560/" target="_blank"><img src="images/facebook.svg" alt="facebook" width="16" height="16"></a>
+                <a href="https://github.com/vic428" target="_blank"><img src="images/github.svg" alt="github" width="16" height="16"></a>
+                <a href="https://www.linkedin.com/feed/" target="_blank"><img src="images/linkedin.svg" alt="linked In" width="16" height="16"></a>
+                <a href="https://web.whatsapp.com/" target="_blank"><img src="images/whatsapp.svg" alt="whatsapp" width="16" height="16"></a>
+            </div>
+
+            <div class="footer-note">
+                <p>WDD231 Class Project | Archibong Victor</p>
+                <p> &copy; <span id="currentyear"></span> Archibong Victor Nkamenyin,Lagos, Nigeria.</p>
+                <p id="lastModified"></p>
+            </div>
+
+        </div>
+      </footer>
+
 </body>
 </html>
