included hamburger menu for responsiveness

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -31,7 +31,12 @@
             <img src="images/home.svg" alt="Ikeja Chamber of Commerce">
             <span>Ikeja Chamber of Commerce</span>
         </div>
-        <nav>
+        <!-- Hamburger button -->
+        <button class="hamburger" id="hamburger" aria-label="Menu">
+            ☰
+        </button>
+
+        <nav id="nav-menu">
             <ul>
                 <li class="active"><a href="directory.html">Home</a></li>
                 <li><a href="#">Directory</a></li>
