Benefits section included

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -38,8 +38,8 @@
 
         <nav id="nav-menu">
             <ul>
-                <li class="active"><a href="directory.html">Home</a></li>
-                <li><a href="#">Directory</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li><a href="#">Join</a></li>
                 <li><a href="#">Discover</a></li>
             </ul>
@@ -49,12 +49,8 @@
 
       <!--Main Content-->
       <main>
-        <section class="hero">
-            <img src="images/civic-towers.jpg" alt="Civic towers, Lagos.">
-            <button class="btn">Keynote Tickets</button>
-        </section>
-
-        <h1>Home</h1>
+        
+        <h1>Directory</h1>
         <section class="info-grid">
             <article class="box">
                 <h2>Events</h2>
