--- a/chamber/index.html
+++ b/chamber/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="scripts/app.js" defer></script>
     <script src="scripts/weather.js" defer></script>
     <script src="scripts/events.js" defer></script>
@@ -60,7 +60,7 @@
         <section class="hero">
             <div class="overlay">
                 <div class="hero-content">
-                    <h1>Empowering Local Businesses</h1>
+                    <h2>Empowering Local Businesses</h2>
                     <p> Join our Chamber of Commerce and become part of a strong network 
                         supporting growth, innovation, and community success.
                     </p>
