--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,7 +33,7 @@
     <!--Header-->
     <header>
         <div class="logo">
-            <img src="images/home.svg" alt="Ikeja Chamber of Commerce">
+            <a href="index.html"><img src="images/home.svg" alt="Ikeja Chamber of Commerce"></a>
             <span>Ikeja Chamber of Commerce</span>
         </div>
         <!-- Hamburger button -->
@@ -45,7 +45,7 @@
             <ul>
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
-                <li><a href="#">Join</a></li>
+                <li><a href="join.html">Join</a></li>
                 <li><a href="#">Discover</a></li>
             </ul>
         </nav>
