Changes in the Meta image property

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Archibong Victor">
 
     <meta property="og:description" content="This website will serve as a resource hub for businesses in the city of Ikeja. The site will provide information on local events, host networking opportunities, create business directories, and encourage local shopping. It aims to promote local economic growth, support local businesses, and foster a sense of community between the businesses..">
-    <meta property="og:image" content="https://www.ahstatic.com/photos/7577_ho_00_p_1024x768.jpg">
+    <meta property="og:image" content="images/meta-image.jpg">
     <meta property="og:title" content="Ikeja Chamber of Commerce">
     <meta property="og:url" content="directory.html">
 
