--- a/Project/websiteplan.html
+++ b/Project/websiteplan.html
@@ -70,8 +70,8 @@
         <p> Application Form & Thank you page: Roboto, Roboto Condensed</p>
 
         <h1>Wireframe</h1>
-        <img src="" alt="">
-        <img src="" alt="">
+        <img src="images/wireframe-larger.png" alt="wireframe of page on larger screen">
+        <img src="images/wireframe-small.png" alt="wireframe of page on smaller screen">
 
        
       </main>
