--- a/chamber/join.html
+++ b/chamber/join.html
@@ -47,7 +47,7 @@
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
             </ul>
         </nav>
       </header>
