--- a/Project/faq.html
+++ b/Project/faq.html
@@ -51,10 +51,10 @@
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#programs">Programs</a></li>
+                    <li><a href="team.html">Team</a></li>
+                    <li><a href="apply.html">Apply</a></li>
                     <li><a href="faq.html">FAQ</a></li>
-                    <li><a href="index.html" class="donate-btn">Donate</a></li>
+                    <li><a href="donate.html" class="donate-btn">Donate</a></li>
                 </ul>
             </nav>
         </header>
