--- a/Project/index.html
+++ b/Project/index.html
@@ -49,8 +49,8 @@
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#programs">Programs</a></li>
+                    <li><a href="team.html">Team</a></li>
+                    <li><a href="apply.html">Apply</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="donate.html" class="donate-btn">Donate</a></li>
                 </ul>
@@ -67,8 +67,8 @@
                     potential. 
                 </p>
                 <div class="hero-buttons">
-                    <a href="#" class="btn btn-primary"> Get Involved</a>
-                    <a href="#" class="btn btn-secondary"> Apply For Support</a>
+                    <a href="donate.html" class="btn btn-primary"> Get Involved</a>
+                    <a href="apply.html" class="btn btn-secondary"> Apply For Support</a>
                 </div>
                 <p class="subtext">Join our community and help students succeed today</p>
             </div>
