--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <ul>
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="#">Chamber Project</a></li>
-            <li><a href="#">Final Project</a></li>
+            <li><a href="https://vic428.github.io/wdd231/Project/index.html">Final Project</a></li>
         </ul>
     </nav>
 
